--- a/portafolio.html
+++ b/portafolio.html
@@ -85,8 +85,21 @@
         <ul class="portafolio__card-images">
           <li class="portafolio__card-list">
             <div class="portafolio__card-animation">
-              <a href="#" class="portafolio__link-images">
-                <img src="images/images7.jpg" alt="Preparacion de nuestro sitio web" width="370" height="294" />
+              <picture>
+                <source media="(min-width:1200px)" srcset="
+                                    ./images/tecnoduck-desktop.jpg    1x,
+                                    ./images/tecnoduck-desktop@2x.jpg 2x
+                                  " />
+                <source media="(min-width:768px)" srcset="
+                                    ./images/tecnoduck-tablet.jpg    1x,
+                                    ./images/tecnoduck-tablet@2x.jpg 2x
+                                  " />
+                <img srcset="
+                                    ./images/tecnoduck-mobile.jpg    1x,
+                                    ./images/tecnoduck-mobile@2x.jpg 2x
+                                  " src="./images/team/mobile/image.jpg" width="450" alt="tecnoduck" loading="lazy"
+                  class="cards__img" />
+              </picture>
                 <div class="portafolio__animation">
                   <p class="portafolio__text-animation">Tecnoduck es una plataforma de distribución de coronavirus de
                     última generación. Las compañías usan esta plataforma para el espionaje digital y los ataques a los
@@ -97,167 +110,239 @@
               <h3 class="portafolio__portafolio-title">Tecnoduck</h3>
               <p class="portafolio__portafolio-text">Sitio-web</p>
             </div>
-            </a>
           </li>
 
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images8.jpg" alt="PUNTUALIDAD" width="370" height="294" />
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/new-orleans-desktop.jpg    1x,
+                                  ./images/new-orleans-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/new-orleans-tablet.jpg    1x,
+                                  ./images/new-orleans-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/new-orleans-mobile.jpg    1x,
+                                  ./images/new-orleans-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="new-orleans" loading="lazy"
+                class="cards__img" />
+            </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">
                   Nueva Orleans vs Estrella Dorada
                 </h3>
                 <p class="portafolio__portafolio-text">Diseño</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images9.jpg" alt="Restaurante" width="370" height="294" />
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/seafood-desktop.jpg    1x,
+                                  ./images/seafood-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/seafood-tablet.jpg    1x,
+                                  ./images/seafood-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/seafood-mobile.jpg    1x,
+                                  ./images/seafood-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="seafood" loading="lazy"
+                class="cards__img" />
+            </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">Restaurante Seafood</h3>
                 <p class="portafolio__portafolio-text">Aplicaciones</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images10.jpg" alt="Proyecto Prime" width="370" height="294" />
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/prime-desktop.jpg    1x,
+                                  ./images/prime-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/prime-tablet.jpg    1x,
+                                  ./images/prime-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/prime-mobile.jpg    1x,
+                                  ./images/prime-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="prime" loading="lazy" class="cards__img" />
+            </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">Proyecto Prime</h3>
                 <p class="portafolio__portafolio-text">Marketing</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images11.jpg" alt="Proyecto Cajas" width="370" height="294" />
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/boxes-desktop.jpg    1x,
+                                  ./images/boxes-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/boxes-tablet.jpg    1x,
+                                  ./images/boxes-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/boxes-mobile.jpg    1x,
+                                  ./images/boxes-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="boxes" loading="lazy" class="cards__img" />
+            </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">Proyecto Cajas</h3>
                 <p class="portafolio__portafolio-text">Aplicaciones</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images12.jpg" alt="La inspiración no tiene límites" width="370" height="294" />
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/inspiration-desktop.jpg    1x,
+                                  ./images/inspiration-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/inspiration-tablet.jpg    1x,
+                                  ./images/inspiration-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/inspiration-mobile.jpg    1x,
+                                  ./images/inspiration-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="inspiration" loading="lazy"
+                class="cards__img" />
+            </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">La inspiración no tiene límites</h3>
                 <p class="portafolio__portafolio-text">Sitio-Web</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images13.jpg" alt="Edición Limitada" width="370" height="294" />
+          <picture>
+            <source media="(min-width:1200px)" srcset="
+                                ./images/limited-desktop.jpg    1x,
+                                ./images/limited-desktop@2x.jpg 2x
+                              " />
+            <source media="(min-width:768px)" srcset="
+                                ./images/limited-tablet.jpg    1x,
+                                ./images/limited-tablet@2x.jpg 2x
+                              " />
+            <img srcset="
+                                ./images/limited-mobile.jpg    1x,
+                                ./images/limited-mobile@2x.jpg 2x
+                              " src="./images/team/mobile/image.jpg" width="450" alt="limited" loading="lazy"
+              class="cards__img" />
+          </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">Edición Limitada</h3>
                 <p class="portafolio__portafolio-text">Diseño</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images14.jpg" alt="Proyecto LAB" width="370" height="294" />
-              <div class="portafolio__card-portafolio">
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/lab-desktop.jpg    1x,
+                                  ./images/lab-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/lab-tablet.jpg    1x,
+                                  ./images/lab-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/lab-mobile.jpg    1x,
+                                  ./images/lab-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="lab-project" loading="lazy"
+                class="cards__img" />
+            </picture>
+            <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">Proyecto LAB</h3>
                 <p class="portafolio__portafolio-text">Marketing</p>
               </div>
-            </a>
           </li>
-
           <li class="portafolio__card-list">
-            <a href="#" class="portafolio__link-images">
-              <img src="images/images15.jpg" alt="Negocio en Crecimiento" width="370" height="294" />
+            <picture>
+              <source media="(min-width:1200px)" srcset="
+                                  ./images/business-desktop.jpg    1x,
+                                  ./images/business-desktop@2x.jpg 2x
+                                " />
+              <source media="(min-width:768px)" srcset="
+                                  ./images/business-tablet.jpg    1x,
+                                  ./images/business-tablet@2x.jpg 2x
+                                " />
+              <img srcset="
+                                  ./images/business-mobile.jpg    1x,
+                                  ./images/business-mobile@2x.jpg 2x
+                                " src="./images/team/mobile/image.jpg" width="450" alt="business" loading="lazy"
+                class="cards__img" />
+            </picture>
               <div class="portafolio__card-portafolio">
                 <h3 class="portafolio__portafolio-title">Negocio en Crecimiento</h3>
                 <p class="portafolio__portafolio-text">Aplicaciones</p>
               </div>
-            </a>
           </li>
         </ul>
       </div>
     </section>
   </main>
-  <footer class="footer">
-    <div class="container">
-      <div class="footer__footer">
-        <div class="seccion-one">
-          <a href="https://www.google.com/urlsa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjZ1KeeqvL9AhXumWoFHTuwAtIQFnoECBIQAQ&url=https%3A%2F%2Fwebstudy.pt%2F&usg=AOvVaw30ssXH3MeAgQATn-cXA_QP"
-            class="footer__webstudio">WebStudio</a>
-          <address class="footer__address">
-            <a class="footer__direction">
-              <span class="salto">Calz. Ticomán 500, Ciudad de</span>
-              <span class="salto">México, CDMX, México</span>
+<footer class="footer">
+  <div class="container footer__container">
+    <div class="footer__info">
+      <a href="https://www.google.com/urlsa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjZ1KeeqvL9AhXumWoFHTuwAtIQFnoECBIQAQ&url=https%3A%2F%2Fwebstudy.pt%2F&usg=AOvVaw30ssXH3MeAgQATn-cXA_QP"
+        class="footer__webstudio">WebStudio</a>
+      <address class="footer__adress">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="https://www.google.com.mx/maps/place/Calz.+Ticom%C3%A1n+500,+La+Laguna+Ticoman,+Gustavo+A.+Madero,+07340+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.5102022,-99.1350661,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1f9c66374d1dd:0x72c74207e8767392!8m2!3d19.5102022!4d-99.1324912?entry=ttu"
+              target="_blank" rel="noopener noreferrer" class="link footer__link"><span class="footer__span">Ticomán
+                500, Ciudad de México, CDMX, México</span></a>
+          </li>
+          <li class="footer__item">
+            <a class="link footer__link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="footer__item">
+            <a class="link footer__link" href="tel:+525555296000 ">+52 55 5529 6000
             </a>
-            <ul class="footer__contacts-list">
-              <li class="footer__contacts-footer">
-                <a class="footer__one-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="footer__contacts-footer">
-                <a class="footer__one-footer" href="tel+525555296000">
-                  +52 55 5529 6000</a>
-              </li>
-            </ul>
-          </address>
+          </li>
+        </ul>
+      </address>
+    </div>
+    <div class="seccion-one networks">
+      <h4 class="find">Encuentrenos en</h4>
+      <div class="networks__flex">
+        <div class="networks__link-container">
+          <svg class="networks__link-icon">
+            <use href="./images/icons.svg#instagram"></use>
+          </svg>
         </div>
-        <div class="seccion-one networks">
-          <h4 class="find">Encuentrenos en</h4>
-          <div class="networks__flex">
-            <div class="networks__link-container">
-              <svg class="networks__link-icon">
-                <use href="./images/icons.svg#instagram"></use>
-              </svg>
-            </div>
-            <div class="networks__link-container">
-              <svg class="networks__link-icon">
-                <use href="./images/icons.svg#twitter"></use>
-              </svg>
-            </div>
-            <div class="networks__link-container">
-              <svg class="networks__link-icon">
-                <use href="./images/icons.svg#facebook"></use>
-              </svg>
-            </div>
-            <div class="networks__link-container">
-              <svg class="networks__link-icon">
-                <use href="./images/icons.svg#linkedin"></use>
-              </svg>
-            </div>
-          </div>
+        <div class="networks__link-container">
+          <svg class="networks__link-icon">
+            <use href="./images/icons.svg#twitter"></use>
+          </svg>
         </div>
-        <div class="seccion-one">
-          <div class="boletin">
-            <h4 class="find">SUSCRÍBASE AL BOLETÍN INFORMATIVO</h4>
-            <form>
-              <label for="email-footer"></label>
-              <div class="boletin__input">
-                <input class="boletin__inputs sin-borde" type="email" id="email" name="email-footer"
-                  placeholder="Correo electrónico">
-              </div>
-            </form>
-          </div>
+        <div class="networks__link-container">
+          <svg class="networks__link-icon">
+            <use href="./images/icons.svg#facebook"></use>
+          </svg>
         </div>
-        <div class="seccion-one">
-          <div class="boletin__container-button">
-            <button class="boletin__buttons sin-borde" type="checkbox">Suscríbase</button>
-            <div class="boletin__container-svg">
-              <svg class="boletin__iconos">
-                <use href="./images/icons.svg#avion"></use>
-              </svg>
-            </div>
-          </div>
+        <div class="networks__link-container">
+          <svg class="networks__link-icon">
+            <use href="./images/icons.svg#linkedin"></use>
+          </svg>
         </div>
       </div>
     </div>
-    </div>
-  </footer>
+    <form class="footer__form">
+      <label class="footer__label" for="suscribe">suscríbase al boletin informativo</label>
+      <!-- <div class="footer__input-container"> -->
+      <input class="footer__input" type="email" name="email" id="suscribe" placeholder="Correo electrónico" required />
+      <button type="submit" class="button button--footer">
+        Suscribase<svg class="button__icon" width="16" height="12">
+          <use href="./images/icons.svg#avion"></use>
+        </svg>
+      </button>
+      <!-- </div> -->
+    </form>
+  </div>
+</footer>
 </body>
-
 </html>
