--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
   <header class="header">
     <div class="container">
       <div class="header__container">
-        <nav class="header__container">
+        <nav class="header__nav">
           <a class="header__title" href="#">WebStudio</a>
           <button type="button" class="header__open-button">
-            <svg class="icon" width="16" height="12">
-              <use href="./images/icons.svg#menu-mobile"></use>
+            <svg class="iconos" width="16" height="12">
+              <use href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
           <ul class="header__list">
