--- a/portafolio.html
+++ b/portafolio.html
@@ -18,6 +18,43 @@
 </head>
 
 <body>
+  <div class="mobile-menu">
+    <svg class="icon mobile-menu__icon" width="16" height="12">
+      <use href="./images/icons.svg#close"></use>
+    </svg>
+    <ul class="mobile-menu__list">
+      <li class="mobile-menu__item">
+        <a class="link mobile-menu__link mobile-active" href="./index.html" target="_self"
+          rel="noopener noreferrer">Estudio</a>
+      </li>
+      <li class="mobile-menu__item">
+        <a class="link mobile-menu__link" href="portafolio.html" target="_self" rel="noopener noreferrer">Portafolio</a>
+      </li>
+      <li class="mobile-menu__item">
+        <a class="link mobile-menu__link" href="#" target="_self" rel="noopener noreferrer">Contactos</a>
+      </li>
+    </ul>
+    <div class="mobile-menu__contact-container">
+      <a class="link mobile-menu__contact" href="tel:+525555296000" target="_blank" rel="noopener noreferrer">+52 55 5529
+        6000</a>
+      <a class="link mobile-menu__contact" href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">
+        info@devstudio.com</a>
+    </div>
+    <ul class="mobile-menu__social">
+      <li class="mobile-menu__item-social">
+        <a href="#" class="link mobile-menu__social-link">Instagram</a>
+      </li>
+      <li class="mobile-menu__item-social">
+        <a href="#" class="link mobile-menu__social-link">Twitter</a>
+      </li>
+      <li class="mobile-menu__item-social">
+        <a href="#" class="link mobile-menu__social-link">Facebook</a>
+      </li>
+      <li class="mobile-menu__item-social">
+        <a href="#" class="link mobile-menu__social-link">Linkedin</a>
+      </li>
+    </ul>
+  </div>
   <header class="header">
     <div class="container">
       <div class="header__container">
@@ -100,11 +137,9 @@
                                   " src="./images/team/mobile/image.jpg" width="450" alt="tecnoduck" loading="lazy"
                   class="cards__img" />
               </picture>
-                <div class="portafolio__animation">
                   <p class="portafolio__text-animation">Tecnoduck es una plataforma de distribución de coronavirus de
                     última generación. Las compañías usan esta plataforma para el espionaje digital y los ataques a los
                     servidores seguros de la competencia.</p>
-                </div>
             </div>
             <div class="portafolio__card-portafolio">
               <h3 class="portafolio__portafolio-title">Tecnoduck</h3>
@@ -303,7 +338,7 @@
             <a class="link footer__link" href="tel:+525555296000 ">+52 55 5529 6000
             </a>
           </li>
-        </ul>
+        </ul><
       </address>
     </div>
     <div class="seccion-one networks">
